--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#ffffff"
+    >
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/cvappicon"
+        android:layout_centerHorizontal="true"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+
+    <TextView
+        android:layout_marginTop="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MaterialAlertDialog.Material3.Body.Text"
+        android:textColor="#0f396d"
+        android:text="CapitaView"
+        android:layout_centerHorizontal="true"
+        android:textSize="40sp"
+        android:id="@+id/loginPageCVTitle"/>
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MaterialAlertDialog.Material3.Body.Text"
+        android:textColor="#0f396d"
+        android:text="Login"
+        android:layout_centerHorizontal="true"
+        android:textSize="25sp"
+        android:layout_below="@+id/loginPageCVTitle"
+        android:id="@+id/loginPageTitle"/>
+
+    <TextView
+        android:id="@+id/loginPageUserNameCaption"
+        style="@style/MaterialAlertDialog.Material3.Body.Text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loginPageTitle"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="56dp"
+        android:text="Username:"
+        android:textColor="#0f396d"
+        android:textSize="25sp" />
+
+    <TextView
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_height="wrap_content"
+        style="@style/MaterialAlertDialog.Material3.Body.Text"
+        android:textColor="#0f396d"
+        android:layout_below="@+id/loginPageUserNameCaption"
+        android:text="Password:"
+        android:textSize="25sp"
+        android:id="@+id/loginPagePasswordCaption"/>
+
+
+    <EditText
+        android:id="@+id/LoginPageUserNameEntry"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/loginPageTitle"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="62dp"
+        android:layout_toEndOf="@+id/loginPageUserNameCaption"
+        android:background="@color/white"
+        android:textColor="@color/black"
+        />
+
+
+
+    <EditText
+        android:id="@+id/LoginPagePassWordEntry"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/LoginPageUserNameEntry"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="18dp"
+        android:layout_toEndOf="@+id/loginPagePasswordCaption"
+        android:background="@color/white"
+        android:textColor="@color/black"
+        />
+
+
+</RelativeLayout>
