--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -1,9 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageActivity">
+    android:background="#319bc6"
+    >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/manage"
+        android:layout_gravity="center"
+        android:id="@+id/managePageCVLogo"
+        android:layout_centerHorizontal="true"
+        />
+    <ListView
+        android:layout_below="@+id/managePageCVLogo"
+        android:background="@color/white"
+        android:layout_marginTop="30dp"
+        android:id="@+id/portfolioListView"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:divider="@null"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:text="Add Stocks"
+        android:textSize="15sp"
+        android:id="@+id/AddStocksButton"
+        android:layout_width="wrap_content"
+        android:paddingHorizontal="10dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/portfolioListView"
+        android:background="#0f396d"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        />
+
+</RelativeLayout>
