--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:layout_marginTop="10dp"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="130dp"
+        android:layout_height="130dp"
         android:src="@drawable/cvappicon"
         android:layout_gravity="center"
         android:id="@+id/CapitaViewLogoDashboard"
@@ -28,12 +28,25 @@
         android:layout_gravity="center"
         android:id="@+id/dashboardPageCVTitle"/>
 
+    <TextView
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/MaterialAlertDialog.Material3.Body.Text"
+        android:textColor="@color/white"
+        android:text="CapitaView"
+        android:padding="10dp"
+        android:textSize="15sp"
+        android:layout_gravity="center"
+        android:id="@+id/dashboardUserName"/>
+
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:rowCount="2"
         android:columnCount="2"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center"
         android:padding="4dp"
         >
