--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -8,36 +8,52 @@
     <ImageView
         android:layout_marginTop="20dp"
         android:layout_width="150dp"
+        android:layout_marginStart="20dp"
         android:layout_height="150dp"
         android:src="@drawable/manage"
         android:layout_gravity="center"
         android:id="@+id/managePageCVLogo"
-        android:layout_centerHorizontal="true"
         />
-    <ListView
-        android:layout_below="@+id/managePageCVLogo"
-        android:background="@color/white"
-        android:layout_marginTop="30dp"
-        android:id="@+id/portfolioListView"
-        android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:divider="@null"
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:text="Welcome"
+        android:id="@+id/manageWelcomeText"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="60dp"
+        android:layout_toRightOf="@+id/managePageCVLogo"
         />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:layout_toRightOf="@+id/managePageCVLogo"
+        android:layout_above="@+id/portfolioListView"
         android:text="Add Stocks"
         android:textSize="15sp"
         android:id="@+id/AddStocksButton"
         android:layout_width="wrap_content"
         android:paddingHorizontal="10dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/portfolioListView"
         android:background="#0f396d"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:textColor="@color/white"
         android:layout_centerHorizontal="true"
+        />
+
+    <ListView
+        android:layout_below="@+id/managePageCVLogo"
+        android:background="@color/white"
+        android:layout_marginTop="30dp"
+        android:id="@+id/portfolioListView"
+        android:layout_width="match_parent"
+        android:layout_height="650dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:divider="@color/white"
+        android:dividerHeight="1dp"
         />
 
 </RelativeLayout>
