--- a/app/src/main/res/layout/activity_manage.xml
+++ b/app/src/main/res/layout/activity_manage.xml
@@ -24,9 +24,24 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@+id/managePageCVLogo"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_below="@+id/manageWelcomeText"
+        android:text="Current Date"
+        android:id="@+id/manageDateHeadingText"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/managePageCVLogo"
+        />
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_toRightOf="@+id/managePageCVLogo"
