--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -24,7 +24,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:layout_toRightOf="@+id/viewPageCVLogo"
         />
 
@@ -36,9 +36,22 @@
         android:text="Current Date"
         android:id="@+id/viewDateText"
         android:textStyle="bold"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/viewPageCVLogo"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:layout_below="@+id/viewDateText"
+        android:text="Total Investment:"
+        android:id="@+id/viewTotalInvestmentValue"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/viewPageCVLogo"
         />
 
