--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         style="@style/MaterialAlertDialog.Material3.Body.Text"
         android:textColor="@color/white"
-        android:text="CapitaView"
+        android:text="Name"
         android:padding="10dp"
         android:textSize="15sp"
         android:layout_gravity="center"
