--- a/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/app/src/main/res/layout/activity_main_dashboard.xml
@@ -80,24 +80,10 @@
             />
 
         <ImageButton
-            android:src="@drawable/charts"
+            android:src="@drawable/news_new"
+            android:layout_columnSpan="0"
             android:layout_height="200dp"
-            android:layout_width="200dp"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:id="@+id/dashboardChartsButton"
-            android:text="Charts"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginTop="2dp"
-            />
-
-        <ImageButton
-            android:src="@drawable/news"
-            android:layout_height="200dp"
-            android:layout_width="200dp"
+            android:layout_width="400dp"
             android:layout_columnWeight="1"
             android:layout_rowWeight="1"
             android:id="@+id/dashboardNewsButton"
